<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="48dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="48dp">

        <TextView
            android:layout_width="wrap_content"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"
            android:text="@string/tvTitle" />

        <!-- 1. Version Android -->
        <TextView
            android:id="@+id/tvVersionAndroidLB"
            android:layout_width="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="12sp"
            android:layout_height="wrap_content"
            android:text="@string/tvVersionAndroidLB" />

        <TextView
            android:id="@+id/tvVersionAndroid"
            android:layout_width="wrap_content"
            android:layout_marginBottom="24dp"
            android:textSize="20sp"
            android:layout_height="wrap_content" />

        <!-- 2. FlashLight -->
        <TextView
            android:id="@+id/tvLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/tvLigth" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <Button
                android:id="@+id/btnOff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="12dp"
                android:backgroundTint="@color/gray"
                android:text="@string/btn0ff" />

            <Button
                android:id="@+id/btnOn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:text="@string/btnOn" />

        </TableRow>

        <!-- 3. Level of Battery -->
        <TextView
            android:id="@+id/tvLevelBatteryLB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="12dp"
            android:text="@string/tvLevelBaterry" />

        <!-- 4. Storage -->
        <ProgressBar
            android:id="@+id/pbLevelBattery"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:progressTint="@color/yellowOld" />

        <TextView
            android:id="@+id/tvStorageLB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginBottom="12dp"
            android:textSize="24sp"
            android:text="@string/tvStorage" />

        <EditText
            android:id="@+id/etNameFile"
            android:layout_width="match_parent"
            android:height="48dp"
            android:layout_height="wrap_content"
            android:hint="@string/etNameFile" />

        <Button
            android:id="@+id/btnSaveFile"
            android:text = "@string/btnSave"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/yellowOld"
            android:layout_marginBottom="24dp"/>


        <!-- 5. Connection -->
        <TextView
            android:id="@+id/tvConectionLB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginBottom="12sp"
            android:text="@string/tvState" />

        <TextView
            android:id="@+id/tvConexion"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="24dp"
            android:layout_height="wrap_content" />

        <!-- 6. Bluetooth -->
        <TextView
            android:id="@+id/tvBluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/tvBluetooth" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <Button
                android:id="@+id/btnOffBluetooth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="12dp"
                android:backgroundTint="@color/gray"
                android:text="@string/btn0ff" />

            <Button
                android:id="@+id/btnOnBluetooth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:text="@string/btnOn" />

        </TableRow>


    </LinearLayout>

</ScrollView>